finished pro_practice

--- a/pro_practice/index.html
+++ b/pro_practice/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <h1>The Countdown...</h1>
+    <button class="reset">Reset Timer</button>
     <div class="count">10</div>
+    <div class="imgDiv"></div>
   </body>
 </html>
